@@ -1,3 +1,5 @@
+* Fixed issue with the auto-replace on load option on the toolbar button menu showing incorrect values in some cases (issue 142).
+
 v0.16.0 (2014-05-31)
 * Updated toolbar icons for Australis.
 * Moved toolbar close button to the right to match newer Firefox versions.
